tests/snapshots/snapshot_test__display_effect_fade.snap
---
source: tests/snapshot_test.rs
expression: display1
---
Text:
  speaker: ~
  text: Fade in effect
  visual:
    background: assets/bg.png
    character: ~
    char_pos: center
    characters: []
    nvl_mode: false
