tests/snapshots/snapshot_test__display_effect_shake.snap
---
source: tests/snapshot_test.rs
expression: display2
---
Text:
  speaker: ~
  text: "Now it's raining."
  visual:
    background: assets/bg.png
    character: ~
    char_pos: center
    characters: []
    nvl_mode: false
