tests/snapshots/snapshot_test__display_minimal.snap
---
source: tests/snapshot_test.rs
expression: display
---
Text:
  speaker: ~
  text: "Hello, world!"
  visual:
    background: ~
    character: ~
    char_pos: center
    characters: []
    nvl_mode: false
