tests/snapshots/snapshot_test__display_text_nested_color.snap
---
source: tests/snapshot_test.rs
expression: display2
---
Text:
  speaker: ~
  text: "{color:red}Outer {color:yellow}inner{/color} outer{/color}"
  visual:
    background: ~
    character: ~
    char_pos: center
    characters: []
