tests/snapshots/snapshot_test__display_text_ruby.snap
---
source: tests/snapshot_test.rs
expression: display3
---
Text:
  speaker: ~
  text: "{ruby:漢字:かんじ} test"
  visual:
    background: ~
    character: ~
    char_pos: center
    characters: []
    nvl_mode: false
